<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_title"
        android:layout_marginTop="@dimen/dialog_content_margin"
        android:layout_marginStart="@dimen/dialog_content_margin"
        android:layout_marginEnd="@dimen/dialog_content_margin"
        android:layout_marginBottom="@dimen/dialog_title_bottom_margin"
        android:text="@string/blipboost_dialog_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_message"
        android:layout_below="@id/tv_title"
        android:layout_marginStart="@dimen/dialog_content_margin"
        android:layout_marginEnd="@dimen/dialog_content_margin"
        android:layout_marginBottom="@dimen/dialog_content_margin"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:text="@string/blipboost_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_send"
        android:layout_below="@id/tv_message"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/email_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_below="@id/tv_message"
        android:layout_toStartOf="@id/btn_send"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/no_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
