<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sw_ltype"
            android:layout_marginTop="@dimen/dialog_content_margin"
            android:layout_centerHorizontal="true"
            app:switchMinWidth="@dimen/local_nationwide_switch_width"
            android:theme="@style/Theme.AppTheme.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_toStartOf="@id/sw_ltype"
            android:layout_alignBaseline="@id/sw_ltype"
            android:text="@string/local_location"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_toEndOf="@id/sw_ltype"
            android:layout_alignBaseline="@id/sw_ltype"
            android:text="@string/online_location"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_marginTop="@dimen/card_title_to_subtitle_padding"
            android:paddingTop="@dimen/labeled_text_field_top_padding"
            android:paddingBottom="@dimen/labeled_text_field_bottom_padding"
            android:layout_below="@id/sw_ltype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_phone"
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:id="@+id/rl_location"
            android:layout_below="@id/til_phone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_address1"
                android:paddingTop="@dimen/labeled_text_field_top_padding"
                android:paddingBottom="@dimen/labeled_text_field_bottom_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_address1"
                    android:hint="@string/first_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_address2"
                android:layout_below="@id/til_address1"
                android:paddingTop="@dimen/labeled_text_field_top_padding"
                android:paddingBottom="@dimen/labeled_text_field_bottom_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_address2"
                    android:hint="@string/second_address"
                    android:text="#"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_city"
                android:layout_below="@id/til_address2"
                android:paddingTop="@dimen/labeled_text_field_top_padding"
                android:paddingBottom="@dimen/labeled_text_field_bottom_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_city"
                    android:hint="@string/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/tv_state"
                android:layout_below="@id/til_city"
                android:layout_marginTop="@dimen/text_field_vertical_padding"
                android:text="@string/state"
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_zipcode"
                android:layout_below="@id/til_city"
                android:paddingTop="@dimen/labeled_text_field_top_padding"
                android:paddingBottom="@dimen/labeled_text_field_bottom_padding"
                android:layout_marginStart="@dimen/content_side_edge_padding"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_zipcode"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:hint="@string/zipcode"
                    android:maxLength="5"
                    />
            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:id="@+id/sp_state"
                android:layout_below="@id/tv_state"
                android:layout_toStartOf="@id/til_zipcode"
                android:minHeight="@dimen/min_touch_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_website"
            android:layout_below="@id/rl_location"
            android:paddingTop="@dimen/labeled_text_field_top_padding"
            android:paddingBottom="@dimen/labeled_text_field_bottom_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_website"
                android:hint="@string/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_description"
            android:layout_below="@id/til_website"
            android:paddingTop="@dimen/labeled_text_field_top_padding"
            android:paddingBottom="@dimen/labeled_text_field_bottom_padding"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_description"
                android:hint="@string/short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.CardView
            android:layout_below="@id/til_description"
            android:id="@+id/cv_buttons"
            app:cardElevation="4dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_remove"
                    android:clickable="true"
                    android:layout_gravity="center_vertical|end"
                    android:drawablePadding="8dp"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:textColor="?colorAccent"
                    android:text="@string/remove"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="@dimen/tool_bar_height" />
                <Button
                    android:id="@+id/btn_edit"
                    android:clickable="true"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginStart="16dp"
                    android:drawablePadding="8dp"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:textColor="?colorAccent"
                    android:text="@string/edit"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="@dimen/tool_bar_height" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</merge>