<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragment.Filters">
    <ScrollView
        android:layout_marginTop="@dimen/dialog_content_margin"
        android:layout_marginStart="@dimen/dialog_content_margin"
        android:layout_marginEnd="@dimen/dialog_content_margin"
        android:scrollbarStyle="outsideInset"
        android:layout_width="@dimen/filter_dialog_width"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_keyword_til"
                android:paddingTop="@dimen/labeled_text_field_top_padding"
                android:paddingBottom="@dimen/labeled_text_field_bottom_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_keyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textFilter"
                    android:hint="@string/search_for"
                    />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/tv_categories"
                android:layout_below="@id/et_keyword_til"
                android:layout_marginTop="@dimen/text_field_vertical_padding"
                android:layout_alignParentStart="true"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/secondary_text_color"
                android:gravity="center"
                android:text="@string/in"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/min_touch_target"/>
            <Spinner
                android:id="@+id/sp_categories"
                android:layout_below="@id/et_keyword_til"
                android:layout_toEndOf="@id/tv_categories"
                android:layout_marginTop="@dimen/text_field_vertical_padding"
                android:layout_marginStart="@dimen/content_side_edge_padding"
                android:drawSelectorOnTop="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/min_touch_target"/>
            <RadioGroup
                android:layout_marginTop="@dimen/text_field_vertical_padding"
                android:id="@+id/rg_vendors"
                android:layout_below="@id/tv_categories"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_local"
                    android:text="@string/from_local"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/min_touch_target" />
                <RadioButton
                    android:id="@+id/rb_nationwide"
                    android:text="@string/from_nationwide"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/min_touch_target" />
            </RadioGroup>
            <TextView
                android:id="@+id/tv_show"
                android:layout_below="@id/rg_vendors"
                android:layout_marginTop="@dimen/dialog_title_bottom_margin"
                android:layout_alignParentStart="true"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/secondary_text_color"
                android:text="@string/show_results_within"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/sp_miles"
                android:layout_below="@id/tv_show"
                android:entries="@array/miles_array"
                android:layout_marginTop="@dimen/text_field_vertical_padding"
                android:drawSelectorOnTop="true"
                android:layout_width="96dp"
                android:layout_height="@dimen/min_touch_target"/>
            <TextView
                android:id="@+id/tv_miles_of"
                android:layout_toEndOf="@id/sp_miles"
                android:layout_below="@id/tv_show"
                android:layout_marginTop="@dimen/text_field_vertical_padding"
                android:layout_marginStart="@dimen/content_areas_space"
                android:layout_marginEnd="@dimen/content_areas_space"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/secondary_text_color"
                android:gravity="center"
                android:text="@string/miles_from"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/min_touch_target" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tv_zipcode_til"
                android:layout_toEndOf="@id/tv_miles_of"
                android:layout_below="@id/tv_show"
                android:paddingTop="@dimen/content_areas_space"
                android:paddingBottom="@dimen/labeled_text_field_bottom_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:hint="@string/zipcode"
                    android:text="00000"
                    android:maxLength="5"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_apply"
            android:layout_alignParentEnd="true"
            android:text="@string/apply"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_toStartOf="@id/btn_apply"
            android:text="@android:string/cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>