<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <RelativeLayout
            android:id="@+id/rl_message"
            android:orientation="vertical"
            android:minWidth="280dp"
            android:animateLayoutChanges="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_admin"
                android:text="@string/send_to_localblip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_recipient"
                android:layout_below="@id/sw_admin"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:hint="@string/vendor_name"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_recipient"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_message"
                android:layout_below="@id/til_recipient"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/what_to_ask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="3"
                    android:gravity="top"
                    android:imeOptions="actionSend"
                    android:id="@+id/et_message"/>
            </android.support.design.widget.TextInputLayout>
            <ProgressBar
                android:id="@+id/pb_sending"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_send"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
